tests/ui-tests/tests/cases/inline-fragment-fallback-validation.stderr
error: The fallback for a union type must be a unit variant
  --> $DIR/inline-fragment-fallback-validation.rs:16:5
   |
16 |     #[cynic(fallback)]
   |     ^
